Fix CUDA compatibility issues for fresh installs
- Pin nvidia-cudnn-cu12==8.9.7.29 (faster-whisper needs v8.x, not v9.x)
- Add nvidia-cublas-cu12 dependency
- Replace os.add_dll_directory() with os.environ['PATH'] modification
  (more reliable across different Windows configurations)

--- a/requirements.txt
+++ b/requirements.txt
@@ -92,3 +92,7 @@ scipy==1.11.4
 # GPU/ML packages - install separately for CUDA compatibility:
 # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
 # pip install pyannote.audio
+
+# CUDA libraries (faster-whisper needs cuDNN v8.x, not v9.x)
+nvidia-cudnn-cu12==8.9.7.29
+nvidia-cublas-cu12
